@@ -1,21 +1,17 @@
 package com.upc.ep.ServicesIMPL;
 
 import com.upc.ep.DTO.*;
-import com.upc.ep.Entidades.Lote;
-import com.upc.ep.Entidades.Marca;
-import com.upc.ep.Entidades.Prenda;
-import com.upc.ep.Entidades.Talla;
+import com.upc.ep.Entidades.*;
 import com.upc.ep.Repositorio.*;
 import com.upc.ep.Services.PrendaService;
-import jakarta.transaction.Transactional;
+
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.time.LocalDateTime;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,358 +20,400 @@ public class PrendaIMPL implements PrendaService {
     private PrendaRepos prendaRepos;
 
     @Autowired
+    private CategoriaRepos categoriaRepos;
+
+    @Autowired
     private MarcaRepos marcaRepos;
-
-    @Autowired
-    private TallaRepos tallaRepos;
-
-    @Autowired
-    private Detalle_VentRepos detalle_ventRepos;
-
-    @Autowired
-    private Detalle_PedRepos detalle_pedRepos;
 
     @Autowired
     private LoteRepos loteRepos;
 
-    // Recalcular estado de la prenda
+    @Override
     @Transactional
-    public void recalcularEstado(Prenda prenda) {
-        Integer stockTotal = tallaRepos.sumStockByPrendaId(prenda.getIdPrenda());
-        if (stockTotal == null) stockTotal = 0;
-
-        boolean pedidoPendiente = detalle_pedRepos.existsByPrendaIdAndPedidoEstado(prenda.getIdPrenda(), "Pendiente");
-
-        if (pedidoPendiente) prenda.setEstado("Pedido");
-        else if (stockTotal <= 0) prenda.setEstado("Agotado");
-        else prenda.setEstado("Disponible");
-
-        prendaRepos.save(prenda);
+    public PrendaDTO registrarPrenda(PrendaDTO prendaDTO) {
+        Prenda prenda = new Prenda();
+        prenda.setMaterial(prendaDTO.getMaterial());
+        prenda.setDescripcion(prendaDTO.getDescripcion());
+        prenda.setColores(prendaDTO.getColores() != null ? prendaDTO.getColores() : new ArrayList<>());
+        prenda.setFechaRegistro(LocalDate.now());
+        prenda.setEstado("SIN LOTES");
+        prenda.setCategoria(categoriaRepos.findById(
+                        prendaDTO.getCategoria().getIdCategoria())
+                .orElseThrow(() -> new RuntimeException("Categoría no encontrada"))
+        );
+        prenda.setMarca(marcaRepos.findById(
+                        prendaDTO.getMarca().getIdMarca())
+                .orElseThrow(() -> new RuntimeException("Marca no encontrada"))
+        );
+        Prenda guardada = prendaRepos.save(prenda);
+        prendaDTO.setIdPrenda(guardada.getIdPrenda());
+        prendaDTO.setEstado(guardada.getEstado());
+        return prendaDTO;
     }
 
-    private void crearLoteDesdePrenda(Prenda prenda) {
-        Lote lote = new Lote();
-        lote.setCantidad(prenda.getStock());
-        lote.setPrecioCompraTotal(prenda.getPrecioCompra());
-        lote.setPrenda(prenda);
-        loteRepos.save(lote);
+    @Override
+    @Transactional
+    public PrendaDTO editarPrenda(Long id, PrendaDTO prendaDTO) {
+        Prenda prenda = prendaRepos.findById(id)
+                .orElseThrow(() -> new RuntimeException("Prenda no encontrada"));
+        prenda.setMaterial(prendaDTO.getMaterial());
+        prenda.setDescripcion(prendaDTO.getDescripcion());
+        prenda.setColores(prendaDTO.getColores() != null ? prendaDTO.getColores() : new ArrayList<>());
+        if (prendaDTO.getEstado() != null) {
+            prenda.setEstado(prendaDTO.getEstado());
+        }
+        if (!prenda.getCategoria().getIdCategoria().equals(prendaDTO.getCategoria().getIdCategoria())) {
+            prenda.setCategoria(
+                    categoriaRepos.findById(prendaDTO.getCategoria().getIdCategoria())
+                            .orElseThrow(() -> new RuntimeException("Categoría no encontrada"))
+            );
+        }
+        if (!prenda.getMarca().getIdMarca().equals(prendaDTO.getMarca().getIdMarca())) {
+            prenda.setMarca(
+                    marcaRepos.findById(prendaDTO.getMarca().getIdMarca())
+                            .orElseThrow(() -> new RuntimeException("Marca no encontrada"))
+            );
+        }
+        Prenda guardada = prendaRepos.save(prenda);
+        return new PrendaDTO(
+                guardada.getIdPrenda(),
+                guardada.getMaterial(),
+                guardada.getFechaRegistro(),
+                guardada.getEstado(),
+                guardada.getDescripcion(),
+                guardada.getColores(),
+                new CategoriaDTO(
+                        guardada.getCategoria().getIdCategoria(),
+                        guardada.getCategoria().getNombre()
+                ),
+                new MarcaDTO(
+                        guardada.getMarca().getIdMarca(),
+                        guardada.getMarca().getNombre()
+                )
+        );
     }
 
-    // Mapear Prenda a DTO
-    private PrendaDTO mapToDTO(Prenda prenda) {
-        PrendaDTO dto = new PrendaDTO();
+    @Override
+    @Transactional
+    public void eliminarPrenda(Long id) {
+        Prenda prenda = prendaRepos.findById(id)
+                .orElseThrow(() -> new RuntimeException("Prenda no encontrada"));
+        prendaRepos.delete(prenda);
+    }
 
+    @Override
+    @Transactional
+    public Prenda obtenerPrendaPorId(Long idPrenda) {
+        Prenda prenda = prendaRepos.findById(idPrenda)
+                .orElseThrow(() -> new RuntimeException("Prenda no encontrada con id: " + idPrenda));
+        prenda.getColores().size();
+        prenda.getCategoria().getNombre();
+        prenda.getMarca().getNombre();
+        prenda.getLotes().size();
+        if (prenda.getMetrica() != null) prenda.getMetrica().getIdMetrica();
+
+        return prenda;
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<PrendaListadoDTO> listarPrendasConStockYUltimoPrecio() {
+
+        List<Prenda> prendas = prendaRepos.findAllPrendasOrdenDesc();
+        List<PrendaListadoDTO> listado = new ArrayList<>();
+        for (Prenda p : prendas) {
+
+            Long categoriaId = p.getCategoria() != null ? p.getCategoria().getIdCategoria() : null;
+            String categoriaNombre = p.getCategoria() != null ? p.getCategoria().getNombre() : "N/A";
+
+            Long marcaId = p.getMarca() != null ? p.getMarca().getIdMarca() : null;
+            String marcaNombre = p.getMarca() != null ? p.getMarca().getNombre() : "N/A";
+            Lote ultimoLote = loteRepos
+                    .findTopByPrendaIdPrendaAndActivoTrueOrderByFechaIngresoDescIdLoteDesc(p.getIdPrenda());
+            int stockActual = 0;
+            double precioUltimo = 0.0;
+            if (ultimoLote != null) {
+                stockActual = ultimoLote.getStockActual();
+                precioUltimo = ultimoLote.getPrecioVenta();
+            }
+            PrendaListadoDTO dto = new PrendaListadoDTO(
+                    p.getIdPrenda(),
+                    categoriaId,
+                    categoriaNombre,
+                    marcaId,
+                    marcaNombre,
+                    p.getMaterial(),
+                    p.getDescripcion(),
+                    p.getEstado(),
+                    stockActual,
+                    precioUltimo,
+                    p.getColores()
+            );
+            listado.add(dto);
+        }
+        return listado;
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public PrendaDetalleDTO obtenerDetallePrenda(Long idPrenda) {
+        Prenda prenda = prendaRepos.obtenerDetallePrenda(idPrenda)
+                .orElseThrow(() -> new RuntimeException("Prenda no encontrada"));
+        Lote ultimoLote = prenda.getLotes().stream()
+                .max(Comparator
+                        .comparing(Lote::getFechaIngreso)
+                        .thenComparing(Lote::getIdLote))
+                .orElse(null);
+
+        LoteDetalleDTO loteDTO = null;
+
+        if (ultimoLote != null) {
+            List<HistorialDTO> historiales = ultimoLote.getInventarios().stream()
+                    .sorted((a, b) -> b.getIdInventario().compareTo(a.getIdInventario()))
+                    .map(inv -> {
+
+                        HistorialDTO dtoHist = new HistorialDTO();
+
+                        dtoHist.setIdInventario(inv.getIdInventario());
+                        dtoHist.setStock(inv.getStock());
+
+                        Talla talla = inv.getTalla();
+                        TallaDTO tallaDTO = new TallaDTO();
+                        tallaDTO.setIdTalla(talla.getIdTalla());
+                        tallaDTO.setNombre(talla.getNombre());
+
+                        dtoHist.setTalla(tallaDTO);
+
+                        return dtoHist;
+                    })
+                    .toList();
+            loteDTO = new LoteDetalleDTO();
+            loteDTO.setIdLote(ultimoLote.getIdLote());
+            loteDTO.setNumeroLote(ultimoLote.getNumeroLote());
+            loteDTO.setCantidad(ultimoLote.getCantidad());
+            loteDTO.setStockActual(ultimoLote.getStockActual());
+            loteDTO.setPrecioCompraTotal(ultimoLote.getPrecioCompraTotal());
+            loteDTO.setPrecioVenta(ultimoLote.getPrecioVenta());
+            loteDTO.setFechaIngreso(ultimoLote.getFechaIngreso());
+            loteDTO.setActivo(ultimoLote.getActivo());
+            loteDTO.setHistoriales(historiales);
+        }
+        PrendaDetalleDTO dto = new PrendaDetalleDTO();
         dto.setIdPrenda(prenda.getIdPrenda());
-        dto.setColores(prenda.getColores());
-        dto.setCalidad(prenda.getCalidad());
-        dto.setPrecioCompra(prenda.getPrecioCompra());
-        dto.setPrecioVenta(prenda.getPrecioVenta());
-        dto.setStock(prenda.getStock());
-        dto.setDescripcion(prenda.getDescripcion());
-        dto.setEstado(prenda.getEstado());
+        dto.setMaterial(prenda.getMaterial());
         dto.setFechaRegistro(prenda.getFechaRegistro());
+        dto.setEstado(prenda.getEstado());
+        dto.setDescripcion(prenda.getDescripcion());
+        dto.setColores(prenda.getColores());
+        dto.setNombreCategoria(prenda.getCategoria().getNombre());
 
-        // Marca
-        if (prenda.getMarca() != null) {
-            MarcaDTO marcaDTO = new MarcaDTO();
-            marcaDTO.setIdMarca(prenda.getMarca().getIdMarca());
-            marcaDTO.setMarca(prenda.getMarca().getMarca());
-            dto.setMarca(marcaDTO);
+        if (prenda.getCategoria().getImagenBytes() != null) {
+            String base64 = Base64.getEncoder()
+                    .encodeToString(prenda.getCategoria().getImagenBytes());
+            dto.setImagen("data:image/png;base64," + base64);
         }
 
-        // Tallas
-        if (prenda.getTallas() != null && !prenda.getTallas().isEmpty()) {
-            List<TallaSimpleDTO> tallasDTO = prenda.getTallas().stream().map(t -> {
-                TallaSimpleDTO td = new TallaSimpleDTO();
-                td.setIdTalla(t.getIdTalla());
-                td.setSize(t.getSize());
-                td.setCantidad(t.getCantidad());
-                return td;
-            }).collect(Collectors.toList());
-            dto.setTallas(tallasDTO);
-        } else {
-            dto.setTallas(new ArrayList<>());
-        }
+        dto.setNombreMarca(prenda.getMarca().getNombre());
+        dto.setLoteActivo(loteDTO);
 
         return dto;
     }
 
+    @Override
     @Transactional
-    public void restaurarStockYRecalcularEstado(Prenda prenda) {
-
-        // 1. Recalcular stock total de la prenda
-        Integer stockTotal = tallaRepos.sumStockByPrendaId(prenda.getIdPrenda());
-        if (stockTotal == null) stockTotal = 0;
-
-        prenda.setStock(stockTotal); // opcional si tienes campo stock
-
-        // 2. Verificar si tiene pedidos pendientes
-        boolean pedidoPendiente =
-                detalle_pedRepos.existsByPrendaIdAndPedidoEstado(
-                        prenda.getIdPrenda(), "Pendiente"
-                );
-
-        // 3. Calcular estado
-        if (pedidoPendiente) prenda.setEstado("Pedido");
-        else if (stockTotal <= 0) prenda.setEstado("Agotado");
-        else prenda.setEstado("Disponible");
-
-        // 4. Guardar prenda actualizada
+    public void cambiarEstado(Long idPrenda) {
+        Prenda prenda = prendaRepos.findById(idPrenda)
+                .orElseThrow(() -> new RuntimeException("Prenda no encontrada con id: " + idPrenda));
+        prenda.setEstadoAnterior(prenda.getEstado());
+        prenda.setEstado("INACTIVO");
         prendaRepos.save(prenda);
     }
 
-    // Guardar prenda
     @Override
-    public PrendaDTO savePrenda(Prenda prenda) {
-        prenda.setFechaRegistro(LocalDate.now());
-        Prenda prendaGuardada = prendaRepos.save(prenda);
-
-        // Guardar tallas...
-        if (prenda.getTallas() != null && !prenda.getTallas().isEmpty()) {
-            for (Talla talla : prenda.getTallas()) {
-                talla.setPrenda(prendaGuardada);
-                tallaRepos.save(talla);
-            }
-        }
-        crearLoteDesdePrenda(prendaGuardada);
-        recalcularEstado(prendaGuardada);
-        return mapToDTO(prendaGuardada);
-    }
-
-    @Override
-    public PrendaDTO putPrenda(Long id, PrendaDTO prendaDTO) {
-        Prenda prenda = prendaRepos.findById(id)
-                .orElseThrow(() -> new RuntimeException("Prenda no encontrada con ID: " + id));
-
-        // 👇 Guardar valores originales ANTES de modificar
-        Integer stockOriginal = prenda.getStock();
-        Double precioCompraOriginal = prenda.getPrecioCompra();
-
-        // Actualizar campos básicos
-        prenda.setColores(prendaDTO.getColores());
-        prenda.setCalidad(prendaDTO.getCalidad());
-        prenda.setPrecioCompra(prendaDTO.getPrecioCompra());
-        prenda.setPrecioVenta(prendaDTO.getPrecioVenta());
-        prenda.setDescripcion(prendaDTO.getDescripcion());
-
-
-        // Actualizar marca
-        if (prendaDTO.getMarca() != null && prendaDTO.getMarca().getIdMarca() != null) {
-            Marca marca = marcaRepos.findById(prendaDTO.getMarca().getIdMarca())
-                    .orElseThrow(() -> new RuntimeException("Marca no encontrada"));
-            prenda.setMarca(marca);
-        }
-
-        // Guardar cambios básicos
-        Prenda prendaGuardada = prendaRepos.save(prenda);
-
-        // Actualizar o agregar tallas
-        if (prendaDTO.getTallas() != null) {
-            for (TallaSimpleDTO tallaDTO : prendaDTO.getTallas()) {
-                Talla tallaExistente = null;
-                if (tallaDTO.getIdTalla() != null) {
-                    tallaExistente = tallaRepos.findById(tallaDTO.getIdTalla()).orElse(null);
-                }
-
-                if (tallaExistente != null) {
-                    tallaExistente.setCantidad(tallaDTO.getCantidad());
-                } else {
-                    Talla nuevaTalla = new Talla();
-                    nuevaTalla.setSize(tallaDTO.getSize().trim().toUpperCase());
-                    nuevaTalla.setCantidad(tallaDTO.getCantidad());
-                    nuevaTalla.setPrenda(prendaGuardada);
-                    prendaGuardada.getTallas().add(nuevaTalla);
-                }
-            }
-            // Guardar todas las tallas de una vez
-            tallaRepos.saveAll(prendaGuardada.getTallas());
-        }
-
-        // Recalcular stock total y estado
-        Integer nuevoStock = prendaGuardada.getTallas().stream()
-                .mapToInt(Talla::getCantidad).sum();
-        prendaGuardada.setStock(nuevoStock);
-        prendaGuardada.setEstado(nuevoStock > 0 ? "Disponible" : "Agotado");
-
-        prendaRepos.save(prendaGuardada);
-
-        boolean stockCambio = !Objects.equals(prendaGuardada.getStock(), stockOriginal);
-        boolean precioCompraCambio = !Objects.equals(prendaGuardada.getPrecioCompra(), precioCompraOriginal);
-
-        if (stockCambio || precioCompraCambio) {
-            crearLoteDesdePrenda(prendaGuardada);
-        }
-
-        return mapToDTO(prendaGuardada);
-    }
-
-    private void actualizarTallas(Prenda prenda, List<TallaSimpleDTO> dtos) {
-        List<Talla> tallasActuales = prenda.getTallas();
-        List<Talla> tallasNuevas = new ArrayList<>();
-
-        if (dtos != null) {
-            for (TallaSimpleDTO dto : dtos) {
-                Talla tallaExistente = null;
-
-                // Buscar por ID
-                if (dto.getIdTalla() != null) {
-                    tallaExistente = tallasActuales.stream()
-                            .filter(t -> dto.getIdTalla().equals(t.getIdTalla()))
-                            .findFirst()
-                            .orElse(null);
-                }
-
-                // Si no se encontró por ID, buscar por size
-                if (tallaExistente == null && dto.getSize() != null) {
-                    tallaExistente = tallasActuales.stream()
-                            .filter(t -> dto.getSize().equals(t.getSize()))
-                            .findFirst()
-                            .orElse(null);
-                }
-
-                if (tallaExistente != null) {
-                    // Actualizar talla existente
-                    tallaExistente.setSize(dto.getSize());
-                    tallaExistente.setCantidad(dto.getCantidad());
-                    tallasNuevas.add(tallaExistente);
-                } else {
-                    // Crear nueva talla
-                    Talla nueva = new Talla();
-                    nueva.setSize(dto.getSize());
-                    nueva.setCantidad(dto.getCantidad());
-                    nueva.setPrenda(prenda);
-                    tallasNuevas.add(nueva);
-                }
-            }
-        }
-
-        // Limpiar la colección existente y añadir las actualizadas
-        tallasActuales.clear();
-        tallasActuales.addAll(tallasNuevas);
-    }
-
-    // -----------------------------
-    // Métodos de listado y eliminación
-    // -----------------------------
-    @Override
-    public List<Prenda> listarPrendas() {
-        return prendaRepos.findAll();
-    }
-
-    @Override
-    public Prenda findById(Long id) {
-        return prendaRepos.findByIdWithDetails(id)
-                .orElseThrow(() -> new RuntimeException("Prenda no encontrada con ID: " + id));
-    }
-
-    @Override
-    public boolean eliminarPrenda(Long idPrenda) {
-        Optional<Prenda> prendaOpt = prendaRepos.findById(idPrenda);
-        if (prendaOpt.isEmpty()) return false;
-
-        boolean enVenta = detalle_ventRepos.existsByPrenda_IdPrenda(idPrenda);
-        boolean enPedido = detalle_pedRepos.existsByPrenda_IdPrenda(idPrenda);
-        if (enVenta || enPedido) return false;
-
-        prendaRepos.delete(prendaOpt.get());
-        return true;
-    }
-
-    @Override
-    public List<Prenda> listarPorMarca(Long idMarca) {
-        return prendaRepos.listarPorMarca(idMarca);
-    }
-
-    @Override
-    public List<Prenda> listarPorCategoria(Long idCategoria) {
-        return prendaRepos.listarPorCategoria(idCategoria);
-    }
-
-    @Override
-    public List<Prenda> listarPorCalidad(String calidad) {
-        return prendaRepos.listarPorCalidad(calidad);
-    }
-
-    @Override
-    public List<Prenda> listarPorEstado(String estado) {
-        return prendaRepos.listarPorEstado(estado);
-    }
-
-    @Override
-    public List<Marca> listarMarcas() {
-        return prendaRepos.listarMarcas();
-    }
-
-    @Override
-    public List<Prenda> listarPorRangoPrecio(Double min, Double max) {
-        return prendaRepos.findByPrecioVentaBetween(min, max);
-    }
-
-    @Override
-    public List<Prenda> listarPorFecha(LocalDate fechaRegistro) {
-        return prendaRepos.findByFechaRegistro(fechaRegistro);
-    }
-
-    @Override
-    public boolean verificarPrendaExistente(Long marcaId, String calidad) {
-        return prendaRepos.existsByMarca_IdMarcaAndCalidad(marcaId, calidad);
-    }
-
-    @Override
-    public List<PrendaDTO> buscarPrendas(String descripcion, Long idMarca, Long idCategoria, String estado,
-                                         LocalDate fecha, LocalDate fechaDesde, LocalDate fechaHasta) {
-        List<Prenda> prendas = prendaRepos.buscarPrendas(descripcion, idMarca, idCategoria, estado, fecha, fechaDesde, fechaHasta);
-        return prendas.stream().map(this::mapToDTO).collect(Collectors.toList());
-    }
-
-    @Override
-    public void actualizarEstadoPrenda(Prenda prenda) {
-
-        // 1. Calcular stock total desde BD
-        int stockTotal = tallaRepos.sumStockByPrendaId(prenda.getIdPrenda());
-        prenda.setStock(stockTotal);
-
-        // 2. Verificar pedidos pendientes
-        boolean enPedidoPend = detalle_pedRepos.existsByPrendaIdAndPedidoEstado(
-                prenda.getIdPrenda(), "Pendiente"
-        );
-
-        // 3. Definir estado
-        if (enPedidoPend) {
-            prenda.setEstado("Pedido");
-        } else if (stockTotal == 0) {
-            prenda.setEstado("Agotado");
+    @Transactional
+    public void activarPrenda(Long idPrenda) {
+        Prenda prenda = prendaRepos.findById(idPrenda)
+                .orElseThrow(() -> new RuntimeException("Prenda no encontrada con id: " + idPrenda));
+        if (prenda.getEstadoAnterior() != null) {
+            prenda.setEstado(prenda.getEstadoAnterior());
         } else {
-            prenda.setEstado("Disponible");
+            prenda.setEstado("SIN LOTES");
         }
-
         prendaRepos.save(prenda);
     }
 
     @Override
-    public List<PrendaStockBajoDTO> listarStockBajo(Integer limite) {
+    @Transactional(readOnly = true)
+    public List<PrendaCarritoDTO> listarPrendasDisponibles() {
+        return prendaRepos.findByEstadoOrderByIdDesc("DISPONIBLE")
+                .stream()
+                .map(prenda -> {
+                    PrendaCarritoDTO dto = new PrendaCarritoDTO();
+                    dto.setIdPrenda(prenda.getIdPrenda());
+                    dto.setCategoria(prenda.getCategoria().getNombre());
+                    dto.setMarca(prenda.getMarca().getNombre());
+                    dto.setMaterial(prenda.getMaterial());
+                    dto.setDescripcion(prenda.getDescripcion());
+                    if (prenda.getCategoria().getImagenBytes() != null) {
+                        dto.setImagen(Base64.getEncoder()
+                                .encodeToString(prenda.getCategoria().getImagenBytes()));
+                    }
 
-        if (limite == null) limite = 5;
+                    List<Lote> lotesActivos = prenda.getLotes().stream()
+                            .filter(l -> Boolean.TRUE.equals(l.getActivo()) && l.getStockActual() > 0)
+                            .toList();
+                    Lote loteMasAntiguo = lotesActivos.stream()
+                            .min(Comparator
+                                    .comparing(Lote::getFechaIngreso)
+                                    .thenComparing(Lote::getIdLote))
+                            .orElse(null);
+                    dto.setStock(
+                            loteMasAntiguo != null ? loteMasAntiguo.getStockActual() : 0
+                    );
+                    dto.setPrecioVenta(
+                            loteMasAntiguo != null ? loteMasAntiguo.getPrecioVenta() : 0.0
+                    );
+                    return dto;
+                })
+                .toList();
+    }
 
-        List<Prenda> prendas = prendaRepos.listarStockBajo(limite);
-
-        return prendas.stream()
-                .map(p -> {
-                    String marca = (p.getMarca() != null) ? p.getMarca().getMarca() : "Sin marca";
-                    String categoria = (p.getMarca() != null && p.getMarca().getCategoria() != null)
-                            ? p.getMarca().getCategoria().getNombre()
-                            : "Sin categoría";
-
-                    return new PrendaStockBajoDTO(
-                            p.getIdPrenda(),
-                            categoria,
-                            marca,
-                            p.getCalidad(),
-                            p.getStock(),
-                            p.getPrecioVenta()
+    @Override
+    @Transactional(readOnly = true)
+    public List<InventarioActivoDTO> listarInventarioPorPrenda(Long idPrenda) {
+        List<Inventario> inventarios = prendaRepos.findInventarioActivoFIFO(idPrenda);
+        if (inventarios.isEmpty()) return List.of();
+        Long loteMasAntiguo = inventarios.get(0).getLote().getIdLote();
+        return inventarios.stream()
+                .filter(i -> i.getLote().getIdLote().equals(loteMasAntiguo))
+                .map(i -> {
+                    Lote l = i.getLote();
+                    return new InventarioActivoDTO(
+                            l.getIdLote(),
+                            l.getStockActual(),
+                            l.getPrecioVenta(),
+                            i.getIdInventario(),
+                            i.getStock(),
+                            i.getTalla().getNombre()
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    private List<Map<String, Object>> convertirAListaMapa(List<Object[]> resultados, String keyName) {
+        List<Map<String, Object>> lista = new ArrayList<>();
+        for (Object[] r : resultados) {
+            Map<String, Object> mapa = new HashMap<>();
+            mapa.put(keyName, r[0]);
+            mapa.put("total", r[1]);
+            lista.add(mapa);
+        }
+        return lista;
+    }
+
+    @Override
+    public List<Map<String, Object>> distribucionPorCategoria() {
+        return convertirAListaMapa(prendaRepos.countByCategoria(), "categoria");
+    }
+
+    @Override
+    public List<Map<String, Object>> distribucionPorMarca() {
+        return convertirAListaMapa(prendaRepos.countByMarca(), "marca");
+    }
+
+    @Override
+    public List<Map<String, Object>> distribucionPorEstado() {
+        return convertirAListaMapa(prendaRepos.countByEstado(), "estado");
+    }
+
+    @Override
+    public List<PrendaOlvidadaDTO> obtenerPrendasOlvidadas() {
+        LocalDateTime fechaLimite = LocalDateTime.now().minusDays(30);
+        return prendaRepos.findPrendasOlvidadas(fechaLimite);
+    }
+
+    @Override
+    public List<TopDTO> rankingPrendasMasVendidas() {
+        List<Object[]> resultados = prendaRepos.rankingPrendasMasVendidas();
+        List<TopDTO> lista = new ArrayList<>();
+        for (Object[] r : resultados) {
+            TopDTO dto = new TopDTO();
+            dto.setIdPrenda((Long) r[0]);
+            dto.setCategoria((String) r[1]);
+            dto.setMarca((String) r[2]);
+            dto.setMaterial((String) r[3]);
+            dto.setDescripcion((String) r[4]);
+            dto.setUnidadesVendidas((Long) r[5]);
+            lista.add(dto);
+        }
+        return lista;
+    }
+
+    @Override
+    public List<StockBajoDTO> bajoStock(Integer limite) {
+        if (limite == null) {
+            limite = 5;
+        }
+        return prendaRepos.bajoStock(limite);
+    }
+
+    @Override
+    public PrendasTotalesDTO obtenerKPIPrendas() {
+        LocalDate hoy = LocalDate.now();
+        LocalDate inicioMesActual = hoy.minusMonths(1);
+        LocalDate inicioMesAnterior = hoy.minusMonths(2);
+        Long total = prendaRepos.totalPrendas();
+        Long ultimoMes = prendaRepos.prendasDesde(inicioMesActual);
+        Long mesAnterior = prendaRepos.prendasEntre(inicioMesAnterior, inicioMesActual);
+        double crecimiento = 0;
+        if (mesAnterior > 0) {
+            crecimiento = ((double) (ultimoMes - mesAnterior) / mesAnterior) * 100;
+        }
+
+        return new PrendasTotalesDTO(
+                total,
+                ultimoMes,
+                crecimiento
+        );
+    }
+
+    @Override
+    public Long obtenerPrendasAgotadas() {
+        return prendaRepos.totalPrendasAgotadas();
+    }
+
+    @Override
+    public List<StockCategoriaDTO> obtenerStockPorCategoria() {
+        return prendaRepos.stockPorCategoria();
+    }
+
+    private PrendaDTO mapToDTO(Prenda prenda) {
+        PrendaDTO dto = new PrendaDTO();
+        dto.setIdPrenda(prenda.getIdPrenda());
+        dto.setMaterial(prenda.getMaterial());
+        dto.setDescripcion(prenda.getDescripcion());
+        dto.setFechaRegistro(prenda.getFechaRegistro());
+        dto.setEstado(prenda.getEstado());
+        dto.setColores(prenda.getColores());
+        CategoriaDTO catDTO = new CategoriaDTO();
+        catDTO.setIdCategoria(prenda.getCategoria().getIdCategoria());
+        catDTO.setNombre(prenda.getCategoria().getNombre());
+        dto.setCategoria(catDTO);
+
+        MarcaDTO marDTO = new MarcaDTO();
+        marDTO.setIdMarca(prenda.getMarca().getIdMarca());
+        marDTO.setNombre(prenda.getMarca().getNombre());
+        dto.setMarca(marDTO);
+
+        return dto;
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<PrendaDTO> obtenerPrendas() {
+        return prendaRepos.findAll()
+                .stream()
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
+    }
 }
